--- a/CameraApp/app/build.gradle
+++ b/CameraApp/app/build.gradle
@@ -90,4 +90,10 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+    // App compat and UI things
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    //WindowManager
+    implementation 'androidx.window:window:1.0.0-alpha09'
 }
