--- a/CameraApp/app/src/main/AndroidManifest.xml
+++ b/CameraApp/app/src/main/AndroidManifest.xml
@@ -23,11 +23,14 @@
             android:rotationAnimation="seamless"
             android:screenOrientation="fullUser"
             tools:targetApi="Q">
+            <!-- Main app intent filter -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <!-- Declare notch support -->
+            <meta-data android:name="android.notch_support" android:value="true"/>
         </activity>
     </application>
 
